--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.5",
+    "firebase": "^10.14.1",
     "nuxt": "^3.13.0",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.2.4",
