added firebase & authenticate transactions

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 API_KEY=0ee815359a3d4034b9d4fa34ef9eafed
 API_KEY_NEWS=8fa7e820b87e45108bdc863742247040
+API_KEY_FIREBASE=AIzaSyBv19XcPt9Cl0rGfhJfCA5N5NDkl74b1rU
+AUTH_DOMAIN=gkgames-106bc.firebaseapp.com
+PROJECT_ID=gkgames-106bc
+STORAGE_BUCKET=gkgames-106bc.appspot.com
+MESSAGING_SENDER_ID=441787991585
+APP_ID=1:441787991585:web:261fc9ffbacf8fcfe2c560
